--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -1,9 +1,9 @@
-
-  <a routerLink="/"><button class="btn btn-success pull-right" > Today's Weather Here</button></a>
+  <div class="center">
+    <h1>5 Day Forecast</h1>
+  <span class="navigation">To see the current forecast click <a routerLink="/">Here</a>.</span>
+  <div *ngIf="loadingFailed" class="loadingFailed">error retrieving data. Please reload and try again</div>
   <div *ngIf="isLoading">waiting for weather info...</div>
-  <div *ngIf="!isLoading"> Forecast is...
-    <ul>
-      <li *ngFor="let forecast of forecasts">Date is: {{forecast.Date}} temp is: {{forecast.Temp}}</li>      
-    </ul>
+  <div *ngIf="!isLoading">
+      <app-weather *ngFor="let forecast of forecasts" [forecast]="forecast"></app-weather>
   </div>
-
+</div>
